# codethreat-cli

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  ctScan.yml  release.yml
cli/: auth.py  main.py  scan.py  utils.py
src/: config.json
src/api/: project.js  scan.js
src/utils/: config.js  display.js  zip.js
test/api/: project.test.js
test/utils/: config.test.js  zip.test.js
tests/: test_auth.py  test_scan.py
